--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -2,23 +2,32 @@
 body {
   background-color: rgb(242, 242, 242);
 }
-nav ul, nav a {
+a {
+  text-decoration: none;
   font-family: 'Quicksand', sans-serif;
   color: rgb(14, 133, 143);
-  text-decoration: none;
 }
 header img {
-  max-width: 10rem;
+  max-width: 8rem;
+  margin: 1rem;
+}
+header li {
+  float: left;
+  padding: 1rem;
 }
 h1 {
   font-family: 'Vollkorn', serif;
   font-weight: normal;
-  font-size: 1.55rem;
+  font-size: 1.5rem;
 }
 .bodycopy {
   font-family: 'Vollkorn', serif;
   font-weight: normal;
   font-size: 1.1rem;
+}
+article {
+  clear: both;
+  margin: 1rem;
 }
 h2, h3, h4, h5 {
   font-family: 'Quicksand', sans-serif;
@@ -30,6 +39,7 @@ footer {
   font-family: 'Quicksand', sans-serif;
   font-weight: bolder;
   font-size: 0.75rem;
+  margin: 1rem;
 }
 
 /* For copy and paste
