--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -2,32 +2,38 @@
 body {
   background-color: rgb(242, 242, 242);
 }
-a {
-  text-decoration: none;
-  font-family: 'Quicksand', sans-serif;
-  color: rgb(14, 133, 143);
+
+/* layout*/
+header, footer, .intro, .work, .skills, .about-me, .contact {
+  margin: auto;
+  margin-top: 1rem;
+  max-width: 80%;
 }
 header img {
-  max-width: 8rem;
-  margin: 1rem;
+  width: 8rem;
+  margin: 1rem 40% 1rem 40%;
 }
 header li {
   float: left;
   padding: 1rem;
 }
+article {
+  clear: both;
+}
+h2, h3, h4, h5 {
+  margin-bottom: 1rem;
+}
+
+/* font styling */
+a {
+  text-decoration: none;
+  font-family: 'Quicksand', sans-serif;
+  color: rgb(14, 133, 143);
+}
 h1 {
   font-family: 'Vollkorn', serif;
   font-weight: normal;
   font-size: 1.5rem;
-}
-.bodycopy {
-  font-family: 'Vollkorn', serif;
-  font-weight: normal;
-  font-size: 1.1rem;
-}
-article {
-  clear: both;
-  margin: 1rem;
 }
 h2, h3, h4, h5 {
   font-family: 'Quicksand', sans-serif;
@@ -35,18 +41,24 @@ h2, h3, h4, h5 {
   font-size: 1.5rem;
   color: rgb(14, 133, 143);
 }
+.bodycopy {
+  font-family: 'Vollkorn', serif;
+  font-weight: normal;
+  font-size: 1.1rem;
+}
 footer {
   font-family: 'Quicksand', sans-serif;
   font-weight: bolder;
   font-size: 0.75rem;
-  margin: 1rem;
 }
 
-/* For copy and paste
+/* fonts
 font-family: 'Droid Sans', sans-serif;
 font-family: 'Quicksand', sans-serif;
 font-family: 'Vollkorn', serif;
+*/
 
+/* colors
 Teal rgb(14, 133, 143);
 Background rgb(242, 242, 242);
 Gray rgb(51, 51, 51);
